--- a/dexam/src/app/views/landing/components/carousel/carousel.component.html
+++ b/dexam/src/app/views/landing/components/carousel/carousel.component.html
@@ -74,7 +74,7 @@
 <!--  <div id="contact-form">-->
     <div class="form-black-alpha">
       <div class="form-black-alpha__title">Need help with your home work?</div>
-<!--      <p class="form-black-alpha__text">Search thousands of local tutors in over 500 subjects</p>-->
+      <p class="form-black-alpha__text">Search thousands of local tutors in over 500 subjects</p>
       <form id="mainpage-search-subjects" class="form-inline landing-search" action="/" method="get">
 <!--        <input type="hidden" name="LandingUrl" value="/">-->
 <!--        <div class="form-group form-black-alpha__elem landing-search-elem landing-search-elem&#45;&#45;zip">-->
