--- a/dexam/src/app/views/landing/pages/billing/billing.component.scss
+++ b/dexam/src/app/views/landing/pages/billing/billing.component.scss
@@ -71,3 +71,19 @@ tr:nth-child(even) {background-color: #f5f8fc;}
   margin-bottom: 2%;
   margin-top: 2%;
 }
+@media (min-width: 768px) {
+  table.table-sm th, table.table-sm td {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+.table-modify{
+  border-top-left-radius: 0.5rem !important;
+  border-top-right-radius: 0.5rem !important;
+  padding-top: 0 !important;
+  margin: auto !important;
+  width: 80%;
+}
+.table-head{
+  background-color: #ffffff !important;
+}
