--- a/dexam/src/app/views/landing/pages/opportunities/opportunities.component.scss
+++ b/dexam/src/app/views/landing/pages/opportunities/opportunities.component.scss
@@ -32,3 +32,26 @@ tr:nth-child(even) {background-color: #ffffff;}
   color: #e1245a;
   border-color: #e1245a;
 }
+.bottom-nav{
+  position: absolute;
+  bottom: 0;
+}
+.drop-down-index{
+  z-index: 9999999;
+}
+@media (min-width: 768px) {
+  table.table-sm th, table.table-sm td {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+.table-modify{
+  border-top-left-radius: 0.5rem !important;
+  border-top-right-radius: 0.5rem !important;
+  padding-top: 0 !important;
+  margin: auto !important;
+  width: 80%;
+}
+.table-head{
+  background-color: #ffffff !important;
+}
