--- a/dexam/src/app/views/landing/pages/schedule/schedule.component.scss
+++ b/dexam/src/app/views/landing/pages/schedule/schedule.component.scss
@@ -50,3 +50,191 @@
   background-color: #22356e !important;
   padding-top: 0rem !important;
 }
+.table-modify{
+  border-top-left-radius: 0.5rem !important;
+  border-top-right-radius: 0.5rem !important;
+  padding-top: 0 !important;
+  margin: auto !important;
+  //width: 99%;
+}
+.mdb-table-modify{
+  border-top-left-radius: 0.5rem !important;
+  border-top-right-radius: 0.5rem !important;
+  padding-top: 0 !important;
+  margin: auto !important;
+  //width: 95%;
+}
+@media (max-width: 767px) {
+  .mdb-table-modify{
+    margin: 0 .6rem;
+  }
+}
+.table-head{
+  background-color: #ffffff !important;
+}
+.column {
+  float: left;
+  width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+#side-nav {
+  display: flex;
+  float: left;
+  width: 13.5%;
+}
+
+#site-content {
+  flex: 50%;
+}
+
+@media (min-width: 768px) {
+  table.table-sm th, table.table-sm td {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+@media (min-width: 768px) {
+  .card-header {
+    border-radius: 0.6rem;
+    //width: 68%;
+    margin-top: 2%;
+    width: 100% !important;
+    //padding-right: 15px;
+    //padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+@media (max-width: 767px) {
+  .card-header {
+    border-radius: 0.6rem;
+    padding-left: .2rem !important;
+    padding-right: .2rem !important;
+    //width: 68%;
+    margin-top: 2%;
+    width: 100% !important;
+    //padding-right: 15px;
+    //padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
+
+
+.card-text-title{
+  position: relative;
+  left: 0;
+  font-weight: bold;
+  margin-left: .5rem;
+  margin-bottom: 1rem;
+}
+.form-width{
+  width: 80%;
+  margin: 0 auto;
+}
+.col-no-padding{
+  padding-right: 0px !important;
+  padding-left: 0px !important;
+}
+.col-sm-padding{
+  padding-right: 1.5rem !important;
+  //padding-left: 0px !important;
+}
+.margin-top{
+  margin-top: 7.5rem;
+  padding-right: 2.5rem;
+}
+
+
+//@media (min-width: 1200px){
+//  .col-xl-8 {
+//    flex: 0 0 66.66666667%;
+//    max-width: 66.66666667%;
+//    margin-right: 5rem;
+//  }
+//}
+
+.table-fixed{
+  //width: 90% !important;
+  table-layout: fixed;
+  width: 99% !important;
+}
+
+.table-fixed tr, td {
+  //width: 10% !important;
+  font-size: .81rem !important;
+}
+
+@media (min-width: 800px) {
+  .table-fixed table{
+    table-layout: fixed;
+    width: 99% !important;
+    font-size: .81rem !important;
+  }
+}
+
+.table-font tr, td{
+  font-size: .81rem !important;
+}
+@media (min-width: 800px){
+  .table-font tr, td{
+    font-size: .81rem !important;
+  }
+}
+@media (max-width: 1200px){
+  .col-xl-8 {
+    padding: 0 !important;
+  }
+}
+@media (max-width: 1200px){
+  .btn {
+    cursor: pointer;
+    text-transform: uppercase;
+    white-space: normal;
+    padding: .2rem 1rem !important;
+    /* word-wrap: break-word; */
+    /* color: inherit; */
+  }
+  //.table-btn td{
+  //  margin-left: 3%;
+  //}
+}
+@media (max-width: 1200px){
+  .table td, .table th {
+    white-space: inherit;
+  }
+}
+
+.btn[class*="btn-outline-"].btn-sm {
+  padding-top: 0.38rem;
+  padding-bottom: 0.38rem;
+  font-size: 0.5rem;
+}
+.btn-full-width{
+  width: 100%;
+  background: #e1245a ;
+  margin: auto;
+}
+.btn-width{
+  background: #e1245a ;
+  margin: auto;
+  color: #FFFFFF;
+}
+.top-margin {
+  margin-top: 2%;
+}
+.md-form-border{
+  border: 1px solid #dadce0 !important;
+  border-radius: 4px !important;
+  margin: 0 0 0 0 !important;
+}
+.md-form .form-control {
+  margin: 0;
+  border-bottom: none !important;
+}
