--- a/dexam/src/app/views/landing/pages/profile/profile.component.html
+++ b/dexam/src/app/views/landing/pages/profile/profile.component.html
@@ -88,80 +88,18 @@
         </div>
       </form>
       <!-- Navigation -->
-      <ul class="navbar-nav">
-        <li class="nav-item active ">
-          <a class=" nav-link " [routerLink]="['/landing/dashboard']"> <i class="ni ni-tv-2 text-primary"></i> Dashboard
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " [routerLink]="['/landing/schedule']">
-            <i class="ni ni-planet text-blue"></i> Schedule
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " [routerLink]="['/landing/opportunities']">
-            <i class="ni ni-pin-3 text-orange"></i> Tutoring Opportunities
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " [routerLink]="['/landing/gigs']">
-            <i class="ni ni-pin-3 text-orange"></i> Quick gigs
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " [routerLink]="['/landing/chat']">
-            <i class="ni ni-single-02 text-yellow"></i> Messages
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link  active " [routerLink]="['/landing/billing']">
-            <i class="ni ni-bullet-list-67 text-red"></i> Billing
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/landing/students']">
-            <i class="ni ni-key-25 text-info"></i> Students
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/landing/tutors']">
-            <i class="ni ni-circle-08 text-pink"></i> Tutors
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/landing/profile']">
-            <i class="ni ni-key-25 text-info"></i> Profile
-          </a>
-        </li>
-      </ul>
+      <app-navigations></app-navigations>
       <!-- Divider -->
       <hr class="my-3">
-      <!-- Heading -->
-      <h6 class="navbar-heading text-muted">Documentation</h6>
+
       <!-- Navigation -->
-      <ul class="navbar-nav mb-md-3">
-        <li class="nav-item">
-          <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/getting-started/overview.html">
-            <i class="ni ni-spaceship"></i> Getting started
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/foundation/colors.html">
-            <i class="ni ni-palette"></i> Foundation
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard/docs/components/alerts.html">
-            <i class="ni ni-ui-04"></i> Components
-          </a>
-        </li>
-      </ul>
+      <app-lower-nav></app-lower-nav>
     </div>
   </div>
 </nav>
 <div class="main-content">
   <!-- Navbar -->
-  <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
+  <nav class="navbar-new navbar-top navbar-expand-md " id="navbar-main">
     <div class="container-fluid">
       <!-- Brand -->
       <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="../index.html">User Profile</a>
@@ -177,50 +115,12 @@
         </div>
       </form>
       <!-- User -->
-      <ul class="navbar-nav align-items-center d-none d-md-flex">
-        <li class="nav-item dropdown">
-          <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <div class="media align-items-center">
-                <span class="avatar avatar-sm rounded-circle">
-                  <img alt="Image placeholder" src="../assets/img/theme/team-4-800x800.jpg">
-                </span>
-              <div class="media-body ml-2 d-none d-lg-block">
-                <span class="mb-0 text-sm  font-weight-bold">Jessica Jones</span>
-              </div>
-            </div>
-          </a>
-          <div class="dropdown-menu dropdown-menu-arrow dropdown-menu-right">
-            <div class=" dropdown-header noti-title">
-              <h6 class="text-overflow m-0">Welcome!</h6>
-            </div>
-            <a href="../examples/profile.html" class="dropdown-item">
-              <i class="ni ni-single-02"></i>
-              <span>My profile</span>
-            </a>
-            <a href="../examples/profile.html" class="dropdown-item">
-              <i class="ni ni-settings-gear-65"></i>
-              <span>Settings</span>
-            </a>
-            <a href="../examples/profile.html" class="dropdown-item">
-              <i class="ni ni-calendar-grid-58"></i>
-              <span>Activity</span>
-            </a>
-            <a href="../examples/profile.html" class="dropdown-item">
-              <i class="ni ni-support-16"></i>
-              <span>Support</span>
-            </a>
-            <div class="dropdown-divider"></div>
-            <a href="#!" class="dropdown-item">
-              <i class="ni ni-user-run"></i>
-              <span>Logout</span>
-            </a>
-          </div>
-        </li>
-      </ul>
+        <app-top-nav></app-top-nav>
     </div>
   </nav>
   <!-- End Navbar -->
   <!-- Header -->
+<!--  <div class="header bg-default pb-8 pt-5 pt-md-8" >-->
   <div class="header bg-default pb-8 pt-5 pt-md-8" >
     <!-- Mask -->
 <!--    <span class="mask bg-gradient-default opacity-8"></span>-->
